Quick webkit fix for scrollbar. Quick fix for push modal window shaking when setting dynamically overflow:hidden.

--- a/css/common.scss
+++ b/css/common.scss
@@ -330,6 +330,9 @@ footer{
         }
       } //cart-item
     } //cart-insides
+    .cart-insides::-webkit-scrollbar{
+      display: none;
+    }
     .total{
       color: white;
     }
@@ -352,6 +355,8 @@ footer{
       padding: 15px 30px;
       text-decoration: none;
   }
+
+
 }
 
 .pushy-left{
