--- a/css/itemInfo.css
+++ b/css/itemInfo.css
@@ -4232,6 +4232,8 @@ footer .social {
           .pushy .wrapper .cart-insides .cart-item .cart-item-info .cart-item-name {
             font-size: 18px;
             color: #9E9E9E; }
+    .pushy .wrapper .cart-insides::-webkit-scrollbar {
+      display: none; }
     .pushy .wrapper .total {
       color: white; }
     .pushy .wrapper .opensCart {
